--- a/reco/index.html
+++ b/reco/index.html
@@ -1,138 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
-  <!-- animate.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
-  <link rel="stylesheet" href="style.css" />
-
-  <title>Reco</title>
-</head>
-
-<body>
-  <div class="container">
-    <div class="channels"></div>
-    <div class="playlists"></div>
-    <div class="sites"></div>
-    <div class="tools"></div>
-    <div class="myCodeExtensions"></div>
-  </div>
-  </div>
-
-  <!-- JavaScript -->
-  <!-- jQuery first, then Popper.js, Bootstrap JS, then mobile-detect.js-->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.3/mobile-detect.min.js"></script>
-  <script>
-    const isMobile = new MobileDetect(window.navigator.userAgent).os() != null;
-
-    function openInNewTab(url) {
-      var win = window.open(url, "_blank");
-      win.focus();
-    }
-
-    $(document).ready(
-      $.getJSON("data.json", data => {
-        $(".channels").append(
-          `<h2>${data.template.types.channels.name}</h2>`
-        );
-
-        var channel_list = []
-
-        $.each(data.channels, (i, channel) => {
-          $(".channels").append(
-            data.template.types.channels.boilerplate
-            .replace(/\${name}/g, channel["name"])
-            .replace(/\${imgUrl}/g, channel["imgUrl"])
-            .replace(/\${channelUrl}/g, channel["channelUrl"])
-            .replace(/\${description}/g, channel["description"])
-          );
-
-          $(".channels").append(data.template.spacer);
-        });
-
-        if (!isMobile)
-          $(".channels .scale").addClass("w-50");
-        else {
-          $(".channels #moby").attr('style', 'font-size: .8em');
-          $(".channels .scale").addClass("mt-2");
-        }
-
-
-        $(".playlists").append(
-          `<h2 style="margin-top: 1em">${data.template.types.playlists.name}</h2>`
-        );
-
-        $(".playlists").append("<ul style='font-size: 1.07em'></ul>");
-
-        $.each(data.playlists, (i, playlist) => {
-          $(".playlists ul").append(
-            data.template.types.playlists.boilerplate
-            .replace(/\${name}/g, playlist["name"])
-            .replace(/\${url}/g, playlist["url"])
-          );
-        });
-
-        $(".sites").append(
-          `<h2 style="margin-top: 1em">${data.template.types.sites.name}</h2>`
-        );
-
-        $(".sites").append("<ul style='font-size: 1.07em'></ul>");
-
-        $.each(data.sites, (i, site) => {
-          $(".sites ul").append(
-            data.template.types.sites.boilerplate
-            .replace(/\${name}/g, site["name"])
-            .replace(/\${url}/g, site["url"])
-          );
-        });
-
-        $(".tools").append(
-          `<h2 style="margin-top: 1em">${data.template.types.tools.name}</h2>`
-        );
-
-        $(".tools").append("<ul style='font-size: 1.07em'></ul>");
-
-        $.each(data.tools, (i, tool) => {
-          $(".tools ul").append(
-            data.template.types.tools.boilerplate
-            .replace(/\${name}/g, tool["name"])
-            .replace(/\${url}/g, tool["url"])
-            .replace(/\${description}/g, tool["description"])
-          );
-        });
-
-        $(".myCodeExtensions").append(
-          `<h2 style="margin-top: 1em">${data.template.types.myCodeExtensions.name}</h2>`
-        );
-
-        $(".myCodeExtensions").append("<ul></ul>");
-
-        $.each(data.myCodeExtensions, (i, extension) => {
-          $(".myCodeExtensions ul").append(
-            data.template.types.myCodeExtensions.boilerplate
-            .replace(/\${name}/g, extension["name"])
-            .replace(/\${url}/g, extension["url"])
-          );
-        });
-      })
-    );
-  </script>
-</body>
-
-</html>
+<!doctype html><html lang="hu"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/test-website/reco/favicon.ico"/><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/><meta name="msapplication-TileColor" content="#2d89ef"/><meta name="theme-color" content="#ffffff"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/test-website/reco/manifest.json"/><title>Reco</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><link href="/test-website/reco/static/css/main.664cdf51.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(c){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],l=0,i=[];l<n.length;l++)t=n[l],Object.prototype.hasOwnProperty.call(a,t)&&a[t]&&i.push(a[t][0]),a[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(c[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return p.push.apply(p,u||[]),f()}function f(){for(var e,r=0;r<p.length;r++){for(var t=p[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==a[u]&&(n=!1)}n&&(p.splice(r--,1),e=l(l.s=t[0]))}return e}var t={},a={1:0},p=[];function l(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return c[e].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=c,l.c=t,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(r,e){if(1&e&&(r=l(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)l.d(t,n,function(e){return r[e]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/test-website/reco/";var r=window.webpackJsonpreco=window.webpackJsonpreco||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;f()}([])</script><script src="/test-website/reco/static/js/2.73977e91.chunk.js"></script><script src="/test-website/reco/static/js/main.f827306d.chunk.js"></script></body></html>
