remove unused stuff

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-﻿<script>window.location.href = "./d/";</script>
-
+﻿<html>
+	<head>
+	</head>
+	<body>
+		<details>
+			<summary>:)</summary>
+			<img src="https://raw.githubusercontent.com/weyh/weyh/main/chika.gif">
+		</details>
+	</body>
+</html>
