Update justext textarea placement

--- a/justext/index.html
+++ b/justext/index.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"></script>
   </head>
   <body class="m-0 p-0">
-    <div class="m-auto pt-1 p-0 w-75 h-75">
-      <textarea class="form-control vh-100"></textarea>
+    <div class="m-auto p-1 w-75 vh-100">
+      <textarea class="form-control h-100"></textarea>
     </div>
   </body>
 </html>
