Fix md scrolling

--- a/justmd/index.html
+++ b/justmd/index.html
@@ -9,6 +9,13 @@
       #md {
         margin-left: 1em;
         border-radius: var(--input-border-radius);
+        overflow: auto;
+      }
+
+      #md h1, h2 {
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: #3d444d;
       }
     </style>
   </head>
